--- a/graph.html
+++ b/graph.html
@@ -21,8 +21,8 @@
 <body>
   <div class="header">
     <select id="epicSelect"></select>
-    <button id="run">Carica</button>
-    <p id="status">Seleziona un Epico dalla sprint attiva e clicca Carica</p>
+    <button id="openSettings">Settings</button>
+    <p id="status">Select Epics in Actual Sprint</p>
     <button id="copyDebug" title="Copia info ultima chiamata API" style="margin-left:12px;background:#475569">Copia diagnostica</button>
   </div>
   <svg id="canvas"></svg>
