--- a/options.html
+++ b/options.html
@@ -1,39 +1,84 @@
 <!doctype html>
 <html lang="it">
 <head>
-  <meta charset="utf-8" />
-  <title>Impostazioni Jira Epic Graph</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="stylesheet" href="options.css" />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>EasyJira – Settings</title>
+  <style>
+    :root { --bg:#0b1220; --card:#0f172a; --muted:#94a3b8; --accent:#2563eb; --ok:#16a34a; --err:#dc2626; }
+    *{box-sizing:border-box;margin:0;padding:0}
+    body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;background:#0b1220;color:#e5e7eb;line-height:1.4;padding:24px}
+    .wrap{max-width:760px;margin:0 auto}
+    h1{font-size:22px;margin-bottom:16px}
+    .card{background:var(--card);border:1px solid #1f2937;border-radius:10px;padding:18px;margin-bottom:16px}
+    .row{display:flex;gap:12px;align-items:center;flex-wrap:wrap}
+    label{width:160px;color:var(--muted);font-size:14px}
+    input[type="text"],input[type="password"],input[type="email"],input[type="url"]{
+      flex:1;min-width:240px;background:#0b1220;border:1px solid #334155;color:#e5e7eb;
+      padding:10px 12px;border-radius:8px;font-size:14px;outline:none
+    }
+    .btn{background:var(--accent);color:#fff;border:none;border-radius:8px;padding:10px 16px;cursor:pointer}
+    .btn:hover{filter:brightness(1.05)}
+    .muted{color:var(--muted);font-size:12px;margin-top:6px}
+    .status{margin-top:10px;font-size:13px}
+    .status.ok{color:var(--ok)}
+    .status.err{color:var(--err)}
+    .inline{display:flex;align-items:center;gap:10px}
+    .sep{height:1px;background:#1f2937;margin:14px 0}
+    small.code{font-family:ui-monospace,Menlo,Consolas,monospace;color:#cbd5e1}
+  </style>
 </head>
 <body>
   <div class="wrap">
-    <h1>Settings Jira (FacilityGrid)</h1>
+    <h1>Impostazioni EasyJira</h1>
 
-    <label for="baseUrl">Base URL Jira</label>
-    <input id="baseUrl" type="text" placeholder="https://example.atlassian.net/" />
-
-    <label for="email">Email Jira</label>
-    <input id="email" type="email" placeholder="nome@azienda.com" />
-
-    <label for="apiKey">API key Jira</label>
-    <input id="apiKey" type="password" placeholder="••••••••" />
-
-    <div style="display:flex; gap:8px; margin-top:16px;">
-      <button id="save">Salva</button>
-      <button id="test">Test connessione</button>
+    <div class="card">
+      <div class="row">
+        <label for="jiraBaseUrl">Jira Base URL</label>
+        <input id="jiraBaseUrl" type="url" placeholder="https://your-domain.atlassian.net">
+      </div>
+      <div class="row" style="margin-top:10px">
+        <label for="jiraEmail">Jira Email</label>
+        <input id="jiraEmail" type="email" placeholder="nome@azienda.com">
+      </div>
+      <div class="row" style="margin-top:10px">
+        <label for="jiraApiKey">Jira API Key</label>
+        <input id="jiraApiKey" type="password" placeholder="••••••••••••••••">
+      </div>
+      <div class="inline" style="margin-top:8px">
+        <input id="showJira" type="checkbox">
+        <label for="showJira" style="width:auto">Mostra Jira API Key</label>
+      </div>
+      <p class="muted">Ottieni la chiave su <small class="code">https://id.atlassian.com → Security → API token</small>.</p>
     </div>
-    <p id="status"></p>
 
-    <details>
-      <summary>Come ottenere la API key</summary>
-      <ol>
-        <li>Vai su <em>id.atlassian.com</em> &rarr; Security.</li>
-        <li>Crea un <em>API token</em> per Jira Cloud.</li>
-        <li>Usa <em>email</em> + <em>API token</em> per l’auth.</li>
-      </ol>
-    </details>
+    <div class="card">
+      <h2 style="font-size:16px;margin-bottom:10px">Intelligenza Artificiale (OpenAI)</h2>
+      <div class="row">
+        <label for="openAiApiKey">OpenAI API Key</label>
+        <input id="openAiApiKey" type="password" placeholder="sk-...">
+      </div>
+      <div class="inline" style="margin-top:8px">
+        <input id="showOpenAI" type="checkbox">
+        <label for="showOpenAI" style="width:auto">Mostra OpenAI API Key</label>
+      </div>
+      <p class="muted">
+        Verrà usata più avanti per un agente che, con click destro su un nodo <em>BUG</em>, analizzerà similarità con <em>TASK</em> vicini (description-to-description).
+      </p>
+    </div>
+
+    <div class="card">
+      <div class="row">
+        <button id="save" class="btn">Salva</button>
+        <button id="clear" class="btn" style="background:#475569">Cancella chiavi</button>
+      </div>
+      <div id="status" class="status"></div>
+      <p class="muted" style="margin-top:8px">
+        Dati salvati in <small class="code">chrome.storage.sync</small> (sincronizzati col tuo account Chrome).
+      </p>
+    </div>
   </div>
+
   <script src="options.js"></script>
 </body>
 </html>
