--- a/graph.html
+++ b/graph.html
@@ -28,6 +28,8 @@
   <svg id="canvas"></svg>
   <script src="vendor/d3.v7.min.js"></script>
   <script src="layout.js"></script>
+  <!-- NEW: modulo AI -->
+  <script src="ai/similarity.js"></script>
   <script src="graph.js"></script>
 </body>
 </html>
