comparaÃ§Ã£o IA funcionando

--- a/graph.html
+++ b/graph.html
@@ -24,6 +24,8 @@
     <button id="openSettings">Settings</button>
     <p id="status">Select Epics in Actual Sprint</p>
     <button id="copyDebug" title="Copia info ultima chiamata API" style="margin-left:12px;background:#475569">Copia diagnostica</button>
+    <button id="viewSpecs" title="Ver SPECs" style="background:#0f766e">Ver SPECs</button>
+    <button id="dumpEpic" title="Interroga épico (dump completo)" style="background:#334155">Interroga épico</button>
   </div>
   <svg id="canvas"></svg>
   <script src="vendor/d3.v7.min.js"></script>
