--- a/graph.html
+++ b/graph.html
@@ -113,6 +113,51 @@
     .tooltip { position: absolute; padding: 8px 12px; background: rgba(0,0,0,0.85); color: white; border-radius: 4px; font-size: 12px; pointer-events: none; z-index: 1000; opacity: 0; transition: opacity 0.2s; max-width: 250px; }
     .tooltip strong { display: block; margin-bottom: 4px; }
     .tooltip em { color: #aaa; font-style: normal; font-size: 11px; }
+    .status-cursor-overlay {
+      position: absolute;
+      inset: 0;
+      pointer-events: none;
+      z-index: 5;
+    }
+    .status-cursor-line {
+      position: absolute;
+      left: 0;
+      right: -16px;
+      height: 1px;
+      background: rgba(15, 23, 42, 0.35);
+      pointer-events: none;
+    }
+    .status-cursor-handle {
+      position: absolute;
+      right: -16px;
+      width: 60px;
+      height: 18px;
+      margin-top: -9px;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 10px;
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 0.4px;
+      color: #0f172a;
+      background: #f8fafc;
+      border: 1px solid rgba(15, 23, 42, 0.25);
+      border-radius: 999px;
+      box-shadow: 0 2px 6px rgba(15, 23, 42, 0.12);
+      cursor: ns-resize;
+      user-select: none;
+      pointer-events: auto;
+    }
+    #statusFilterList {
+      position: relative;
+    }
+    #statusFilterList .status-cursor-overlay {
+      pointer-events: none;
+    }
+    #statusCursorHandle {
+      pointer-events: auto;
+    }
   </style>
 </head>
 <body>
@@ -130,7 +175,12 @@
     <div class="filters-content">
       <div id="filters-status" class="filters-pane active">
         <p id="statusFilterSummary" class="filters-summary"></p>
-        <div id="statusFilterList"></div>
+        <div id="statusFilterList">
+          <div class="status-cursor-overlay" id="statusCursorOverlay">
+            <div class="status-cursor-line" id="statusCursorLine"></div>
+            <div class="status-cursor-handle" id="statusCursorHandle" tabindex="0" aria-label="Spostare From Here">From here</div>
+          </div>
+        </div>
       </div>
       <div id="filters-type" class="filters-pane">
         <p style="color:#94a3b8;font-size:13px;">(Nessun filtro disponibile)</p>
