Cursor to here created

--- a/graph.html
+++ b/graph.html
@@ -177,8 +177,10 @@
         <p id="statusFilterSummary" class="filters-summary"></p>
         <div id="statusFilterList">
           <div class="status-cursor-overlay" id="statusCursorOverlay">
-            <div class="status-cursor-line" id="statusCursorLine"></div>
-            <div class="status-cursor-handle" id="statusCursorHandle" tabindex="0" aria-label="Spostare From Here">From here</div>
+            <div class="status-cursor-line" id="statusCursorLineStart"></div>
+            <div class="status-cursor-handle" id="statusCursorHandleStart" tabindex="0" aria-label="Spostare From Here">From here</div>
+            <div class="status-cursor-line" id="statusCursorLineEnd"></div>
+            <div class="status-cursor-handle" id="statusCursorHandleEnd" tabindex="0" aria-label="Spostare To Here">To here</div>
           </div>
         </div>
       </div>
