--- a/graph.html
+++ b/graph.html
@@ -160,6 +160,34 @@
       pointer-events: auto;
       z-index: 3;
     }
+    .status-window-handle {
+      position: absolute;
+      right: -16px;
+      width: 60px;
+      background: rgba(148, 163, 184, 0.35);
+      border-radius: 12px;
+      cursor: grab;
+      pointer-events: auto;
+      z-index: 2;
+    }
+    .status-window-handle:active {
+      cursor: grabbing;
+    }
+    .status-window-handle::before,
+    .status-window-handle::after {
+      content: '';
+      width: 26px;
+      height: 3px;
+      border-radius: 999px;
+      background: rgba(71, 85, 105, 0.45);
+    }
+    .status-window-handle span {
+      background: rgba(248, 250, 252, 0.8);
+      border-radius: 999px;
+      padding: 2px 10px;
+      border: 1px solid rgba(71, 85, 105, 0.35);
+      box-shadow: 0 2px 6px rgba(15, 23, 42, 0.12);
+    }
     #statusFilterList {
       position: relative;
     }
@@ -188,6 +216,7 @@
             <div class="status-curtain" id="statusCursorCurtainStart"></div>
             <div class="status-cursor-line" id="statusCursorLineStart"></div>
             <div class="status-cursor-handle" id="statusCursorHandleStart" tabindex="0" aria-label="Spostare From Here">From here</div>
+            <div class="status-window-handle" id="statusWindowHandle" tabindex="0" aria-label="Trascinare finestra"></div>
             <div class="status-curtain" id="statusCursorCurtainEnd"></div>
             <div class="status-cursor-line" id="statusCursorLineEnd"></div>
             <div class="status-cursor-handle" id="statusCursorHandleEnd" tabindex="0" aria-label="Spostare To Here">To here</div>
