--- a/graph.html
+++ b/graph.html
@@ -106,8 +106,115 @@
       position: absolute;
       top: 56px;
       left: 240px;
-      width: calc(100vw - 240px);
+      width: calc(100vw - 240px - 240px);
       height: calc(100vh - 56px);
+    }
+
+    .assignee-panel {
+      position: absolute;
+      top: 56px;
+      right: 0;
+      width: 240px;
+      height: calc(100vh - 56px);
+      background: #ffffff;
+      border-left: 1px solid #e2e8f0;
+      box-shadow: -2px 0 12px rgba(15, 23, 42, 0.08);
+      display: flex;
+      flex-direction: column;
+      padding: 16px 18px;
+      gap: 12px;
+      z-index: 2;
+    }
+    .assignee-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      font-size: 12px;
+      text-transform: uppercase;
+      letter-spacing: 0.6px;
+      color: #475569;
+      font-weight: 600;
+    }
+    .assignee-actions { display: flex; gap: 6px; }
+    .assignee-actions button {
+      border: 1px solid #cbd5f5;
+      background: #f8fafc;
+      color: #475569;
+      border-radius: 999px;
+      padding: 2px 10px;
+      font-size: 11px;
+      text-transform: uppercase;
+      letter-spacing: 0.4px;
+      cursor: pointer;
+    }
+    .assignee-actions button:hover {
+      background: #e2e8f0;
+    }
+    .assignee-list {
+      flex: 1;
+      overflow-y: auto;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+    .assignee-option {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-size: 13px;
+      color: #334155;
+    }
+    .assignee-option input[type="checkbox"] {
+      appearance: none;
+      width: 16px;
+      height: 16px;
+      border: 2px solid #cbd5f5;
+      border-radius: 4px;
+      background: #fff;
+      transition: all 0.15s ease;
+      position: relative;
+      cursor: pointer;
+    }
+    .assignee-option input[type="checkbox"]:checked {
+      border-color: #2563eb;
+      background: #2563eb;
+      box-shadow: 0 0 0 2px rgba(37, 99, 235, 0.15);
+    }
+    .assignee-option input[type="checkbox"]:checked::after {
+      content: '';
+      position: absolute;
+      top: 3px;
+      left: 3px;
+      width: 8px;
+      height: 8px;
+      border-radius: 2px;
+      background: #fff;
+    }
+    .assignee-avatar {
+      width: 28px;
+      height: 28px;
+      border-radius: 50%;
+      background: #e2e8f0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 11px;
+      font-weight: 600;
+      color: #475569;
+      overflow: hidden;
+    }
+    .assignee-avatar img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    .assignee-option span {
+      flex: 1;
+      font-size: 13px;
+    }
+    .assignee-empty {
+      font-size: 12px;
+      color: #94a3b8;
     }
 
     .tooltip { position: absolute; padding: 8px 12px; background: rgba(0,0,0,0.85); color: white; border-radius: 4px; font-size: 12px; pointer-events: none; z-index: 1000; opacity: 0; transition: opacity 0.2s; max-width: 250px; }
@@ -173,21 +280,6 @@
     .status-window-handle:active {
       cursor: grabbing;
     }
-    .status-window-handle::before,
-    .status-window-handle::after {
-      content: '';
-      width: 26px;
-      height: 3px;
-      border-radius: 999px;
-      background: rgba(71, 85, 105, 0.45);
-    }
-    .status-window-handle span {
-      background: rgba(248, 250, 252, 0.8);
-      border-radius: 999px;
-      padding: 2px 10px;
-      border: 1px solid rgba(71, 85, 105, 0.35);
-      box-shadow: 0 2px 6px rgba(15, 23, 42, 0.12);
-    }
     #statusFilterList {
       position: relative;
     }
@@ -227,6 +319,16 @@
         <p style="color:#94a3b8;font-size:13px;">(Nessun filtro disponibile)</p>
       </div>
     </div>
+  </aside>
+  <aside class="assignee-panel" id="assigneePanel">
+    <div class="assignee-header">
+      <span>Users</span>
+      <div class="assignee-actions">
+        <button id="assigneeSelectAll" type="button">All</button>
+        <button id="assigneeSelectNone" type="button">None</button>
+      </div>
+    </div>
+    <div class="assignee-list" id="assigneeFilterList"></div>
   </aside>
   <svg id="canvas"></svg>
   <script src="vendor/d3.v7.min.js"></script>
