--- a/graph.html
+++ b/graph.html
@@ -169,7 +169,7 @@
       width: 16px;
       height: 16px;
       border: 2px solid #cbd5f5;
-      border-radius: 4px;
+      border-radius: 50%;
       background: #fff;
       transition: all 0.15s ease;
       position: relative;
@@ -187,7 +187,7 @@
       left: 3px;
       width: 8px;
       height: 8px;
-      border-radius: 2px;
+      border-radius: 50%;
       background: #fff;
     }
     .assignee-avatar {
