--- a/graph.html
+++ b/graph.html
@@ -106,8 +106,73 @@
       position: absolute;
       top: 56px;
       left: 240px;
-      width: calc(100vw - 240px - 240px);
+      width: calc(100vw - 240px - 240px - 250px);
       height: calc(100vh - 56px);
+    }
+
+    .search-bar-container {
+      position: absolute;
+      top: 56px;
+      right: 240px;
+      width: 250px;
+      height: 50px;
+      background: transparent;
+      border-left: 1px solid #e2e8f0;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      padding: 0 12px;
+      z-index: 2;
+      box-shadow: -2px 0 12px rgba(15, 23, 42, 0.08);
+    }
+    .search-bar-container img {
+      width: 16px;
+      height: 16px;
+      opacity: 1;
+      flex-shrink: 0;
+    }
+    .search-input-wrapper {
+      flex: 1;
+      position: relative;
+      display: flex;
+      align-items: center;
+    }
+    .search-bar-container input {
+      flex: 1;
+      padding: 6px 24px 6px 10px;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      font-size: 13px;
+      outline: none;
+      background: transparent;
+    }
+    .search-bar-container input:focus {
+      border-color: #2563eb;
+      box-shadow: 0 0 0 2px rgba(37, 99, 235, 0.1);
+    }
+    .search-clear-btn {
+      position: absolute;
+      right: 6px;
+      width: 16px;
+      height: 16px;
+      border: none;
+      background: none;
+      cursor: pointer;
+      display: none;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
+      color: #94a3b8;
+      font-size: 14px;
+      line-height: 1;
+      opacity: 0.6;
+    }
+    .search-clear-btn:hover {
+      opacity: 1;
+      color: #64748b;
+    }
+    .search-clear-btn.visible {
+      display: flex;
     }
 
     .assignee-panel {
@@ -295,6 +360,15 @@
       pointer-events: none;
       animation: statusHoverPulse 500ms ease-in-out infinite;
     }
+    .search-highlight-ring {
+      pointer-events: none;
+      animation: searchHighlightPulse 1s ease-in-out infinite;
+    }
+    @keyframes searchHighlightPulse {
+      0% { fill: rgba(34, 197, 94, 0.5); }
+      50% { fill: rgba(34, 197, 94, 0.7); }
+      100% { fill: rgba(34, 197, 94, 0.5); }
+    }
   </style>
 </head>
 <body>
@@ -334,6 +408,13 @@
       </div>
     </div>
   </aside>
+  <div class="search-bar-container">
+    <img src="icons/lente.png" alt="Search">
+    <div class="search-input-wrapper">
+      <input type="text" id="nodeSearchInput" placeholder="Search in nodes">
+      <button type="button" class="search-clear-btn" id="searchClearBtn" aria-label="Clear search">×</button>
+    </div>
+  </div>
   <aside class="assignee-panel" id="assigneePanel">
     <div class="assignee-header">
       <span>Users</span>
