--- a/graph.html
+++ b/graph.html
@@ -116,14 +116,18 @@
       right: 240px;
       width: 250px;
       height: 50px;
+      max-height: 50px;
       background: transparent;
-      border-left: 1px solid #e2e8f0;
       display: flex;
       align-items: center;
       gap: 8px;
       padding: 0 12px;
-      z-index: 2;
-      box-shadow: -2px 0 12px rgba(15, 23, 42, 0.08);
+      z-index: 1;
+      overflow: hidden;
+      pointer-events: none;
+    }
+    .search-bar-container > * {
+      pointer-events: auto;
     }
     .search-bar-container img {
       width: 16px;
