resolvido o problema da barra lateral

--- a/graph.html
+++ b/graph.html
@@ -106,7 +106,7 @@
       position: absolute;
       top: 56px;
       left: 240px;
-      width: calc(100vw - 240px - 240px - 250px);
+      width: calc(100vw - 240px - 240px);
       height: calc(100vh - 56px);
     }
 
